Fix horizontal scroll issue

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body {
 }
 
 .toolbar-mobile {
-  overflow: hidden;
   position: relative;
   margin-top: 10px;
 }
@@ -70,9 +69,7 @@ body {
 
   /* Inside auto layout */
 
-  flex: none;
-  flex-grow: 0;
-  margin: 0;
+  margin-top: auto;
 }
 
 .toolbar-container {
@@ -870,14 +867,13 @@ h5 {
 }
 
 .about-myself {
-  padding: 114px 24px;
-  height: 409px;
   top: 92px;
   background: #fff;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 327px;
+  width: 100%;
+  align-items: center;
 }
 
 .about {
